clang/test/BSC/Negative/Method/invalid/initializer_list.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F2 { void a(This *this) : {}; }; // expected-error {{expected expression}}
// expected-error@-1 {{declarator requires an identifier}}